--- a/Tibox.Angular/Tibox.Web/Views/Shared/_Layout.cshtml
+++ b/Tibox.Angular/Tibox.Web/Views/Shared/_Layout.cshtml
@@ -25,6 +25,7 @@
                     <li><a ui-sref="login" ui-sref-active="active">Ingresar</a></li>                    
                     <li><a href="" ng-click="vm.logout();" ui-sref-active="active">Salir</a></li>                    
                     <li><a ui-sref="product" ui-sref-active="active">Productos</a></li>
+                    <li><a ui-sref="order" ui-sref-active="active">Ordenes</a></li>
                 </ul>
             </div>
         </div>
